<resources>
    <string name="app_name">City Tour</string>
    <string name="action_settings">Settings</string>
    <string name="see_sights">I want to see the sights!</string>
    <string name="favourites">Favourites</string>
    <string name="itinerary">Itinerary</string>
    <string name="postcard">Postcard</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="title_activity_navigation_draw">City Tour</string>
    <string name="currency_flag">Currency flag</string>
    <string name="pound_sterling">£ Pound Sterling</string>
    <string name="us_dollar">$ US Dollar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC_lp_36AiFyBxYPl5y85LEhXi1j3oorBQ
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="places_key">AIzaSyBJwIkzYYTOOWUK8Rj_E0OXiEN1zv_v20Y</string>
    <string name="referer">http://aston.ac.uk/cs3040/places/example</string>
</resources>
