<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.admin123.citytour.MainActivity"
    tools:showIn="@layout/activity_navigation_draw"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/see_sights"
            android:drawableLeft="@drawable/show_me_sights"
            android:onClick="seeSights"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/favourites"
            android:drawableLeft="@drawable/favourites"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/itinerary"
            android:drawableLeft="@drawable/itinerary"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/postcard"
            android:drawableLeft="@drawable/postcard"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:onClick="launchPostcard"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/currency_exchange"
            android:drawableLeft="@drawable/currency_exchange"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:onClick="launchCurrency"/>
    </LinearLayout>

</RelativeLayout>
