<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <Button
            android:id="@+id/seeSightsButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="15dp"
            android:text="@string/see_sights"
            android:background="@drawable/custom_button_grey"
            android:drawableLeft="@drawable/ic_place_black_60px"
            android:onClick="seeSights"
            />

        <Button
            android:id="@+id/launchFavouritesButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:text="@string/favourites"
            android:drawableLeft="@drawable/ic_like_false"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:background="@drawable/custom_button_grey"
            android:scaleType="fitCenter"/>


        <Button
            android:id="@+id/launchPostcardButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="100dp"
            android:text="@string/postcard"
            android:drawableLeft="@drawable/postcard"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:background="@drawable/custom_button_grey"
            android:scaleType="fitCenter"
            android:onClick="launchPostcard"/>

        <Button
            android:id="@+id/launchCurrency"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/currency_exchange"
            android:drawableLeft="@drawable/currency_exchange"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:background="@drawable/custom_button_grey"
            android:scaleType="fitCenter"
            android:onClick="launchCurrency"/>
    </LinearLayout>
</RelativeLayout>